--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -2,7 +2,7 @@
 # This playbook deploys the whole application stack in this site.
 
 - name: apply common configuration to all nodes
-  hosts: centos
+  hosts: all
   remote_user: ansible
 
   roles:
