--- a/lamp/roles/db/handlers/main.yml
+++ b/lamp/roles/db/handlers/main.yml
@@ -1,5 +1,7 @@
 ---
 # Handler to handle DB tier notifications
 
-- name: restart mariadb
-  service: name=mariadb state=restarted
+- name: Restart mariadb
+  service: 
+    name: mariadb 
+    state: restarted
