--- a/lamp/roles/db/tasks/main.yml
+++ b/lamp/roles/db/tasks/main.yml
@@ -2,36 +2,76 @@
 # This playbook will install MariaDB and create db user and give permissions.
 
 - name: Install MariaDB package
-  yum: name={{ item }} state=installed
-  with_items:
-   - mariadb-server
-   - MySQL-python
+  apt: 
+    name: ['mariadb-server','python3-mysqldb']
+    state: present
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Install MariaDB package
+  yum: 
+    name: ['mariadb-server','python3-mysql']
+    state: present
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Configure SELinux to start mysql on any port
-  seboolean: name=mysql_connect_any state=true persistent=yes
+  seboolean: 
+    name: mysql_connect_any 
+    state: true 
+    persistent: yes
 
 - name: Create Mysql configuration file
-  template: src=my.cnf.j2 dest=/etc/my.cnf
+  template: 
+    src: /home/sfeijo/repos/obligatorio_2021_08/lamp/roles/db/templates/my.cnf.j2 
+    dest: /etc/my.cnf
+  vars:
+    mysql_port: 3306
   notify:
-  - restart mariadb
+  - Restart mariadb
 
 - name: Create MariaDB log file
-  file: path=/var/log/mysqld.log state=touch owner=mysql group=mysql mode=0775
+  file: 
+    path: /var/log/mysqld.log 
+    state: touch 
+    owner: mysql 
+    group: mysql 
+    mode: 0775
 
 - name: Create MariaDB PID directory
-  file: path=/var/run/mysqld state=directory owner=mysql group=mysql mode=0775
+  file: 
+    path: /var/run/mysqld 
+    state: directory 
+    owner: mysql 
+    group: mysql 
+    mode: 0775
 
 - name: Start MariaDB Service
-  service: name=mariadb state=started enabled=yes
+  service: 
+    name: mariadb 
+    state: started 
+    enabled: yes
 
 - name: Start firewalld
-  service: name=firewalld state=started enabled=yes
+  service: 
+    name: firewalld 
+    state: started 
+    enabled: yes
 
 - name: insert firewalld rule
-  firewalld: port={{ mysql_port }}/tcp permanent=true state=enabled immediate=yes
+  firewalld: 
+    port: "3306/tcp" 
+    permanent: true 
+    state: enabled 
+    immediate: yes
 
 - name: Create Application Database
-  mysql_db: name={{ dbname }} state=present
+  mysql_db: 
+    name: "obligatorio" ##"{{ dbname }}" 
+    state: present
 
 - name: Create Application DB User
-  mysql_user: name={{ dbuser }} password={{ upassword }} priv=*.*:ALL host='%' state=present
+  mysql_user: 
+    name: "ansible" ##{{ dbuser }} 
+    password: "pepegrillo" ##{{ upassword }} 
+    priv: "*.*:ALL" 
+    host: '%' 
+    state: present
