--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,23 +1,23 @@
 ---
 # This playbook deploys the whole application stack in this site.
 
-- name: apply common configuration to all nodes
-  hosts: all
-  remote_user: ansible
+# - name: apply common configuration to all nodes
+#   hosts: all
+#   remote_user: ansible
 
-  roles:
-    - common
+#   roles:
+#     - common
 
 # - name: configure and deploy the webservers and application code
-#   hosts: centos
+#   hosts: all
 #   remote_user: ansible
  
 #   roles:
 #     - web
 
-# - name: deploy MySQL and configure the databases
-#   hosts: centos
-#   remote_user: ansible
+- name: deploy MySQL and configure the databases
+  hosts: all
+  remote_user: ansible
   
-#   roles:
-#     - db
+  roles:
+    - db
