--- a/lamp/roles/web/tasks/copy_code.yml
+++ b/lamp/roles/web/tasks/copy_code.yml
@@ -3,7 +3,11 @@
 # the version control system.
 
 - name: Copy the code from repository
-  git: repo={{ repository }} dest=/var/www/html/
+  git: 
+    repo: "{{ repository }}" 
+    dest: /var/www/html/repos
 
 - name: Creates the index.php file
-  template: src=index.php.j2 dest=/var/www/html/index.php
+  template: 
+    src: /home/sfeijo/repos/obligatorio_2021_08/lamp/roles/web/templates/index.php.j2 
+    dest: /var/www/html/index.php
