--- a/lamp/roles/web/tasks/install_httpd.yml
+++ b/lamp/roles/web/tasks/install_httpd.yml
@@ -2,25 +2,58 @@
 # These tasks install http and the php modules.
 
 - name: Install httpd and php
-  yum: name={{ item }} state=present
-  with_items:
-   - httpd
-   - php
-   - php-mysql
+  apt: 
+    name: ['apache2','php','php-mysql']
+    state: present
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Install httpd and php
+  yum: 
+    name: ['httpd','php','php-mysqlnd']
+    state: present
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Install web role specific dependencies
-  yum: name={{ item }} state=installed
-  with_items:
-   - git
+  apt: 
+    name: git
+    state: present
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Install web role specific dependencies
+  yum: 
+    name: git
+    state: present
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Start firewalld
-  service: name=firewalld state=started enabled=yes
+  service: 
+    name: firewalld 
+    state: started 
+    enabled: yes
 
 - name: insert firewalld rule for httpd
-  firewalld: port={{ httpd_port }}/tcp permanent=true state=enabled immediate=yes
+  firewalld:
+    port: "{{ httpd_port }}/tcp"
+    permanent: true 
+    state: enabled 
+    immediate: yes
 
 - name: http service state
-  service: name=httpd state=started enabled=yes
+  service: 
+    name: httpd 
+    state: started 
+    enabled: yes
+  when: ansible_facts['os_family'] == "RedHat"
+
+- name: http service state
+  service: 
+    name: apache2
+    state: started 
+    enabled: yes
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Configure SELinux to allow httpd to connect to remote database
-  seboolean: name=httpd_can_network_connect_db state=true persistent=yes
+  seboolean: 
+    name: httpd_can_network_connect_db 
+    state: true 
+    persistent: yes
